[project]
name = "db-bridge"
version = "0.1.2"
description = "Simple SQL connector — pass native SQL queries as strings with zero boilerplate."
readme = "README.md"
authors = [{name = "Kanad Rishiraj (RoamingSaint)", email = "roamingsaint27@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = [
  "pymysql>=1.0",
  "AskUser>=0.1.1",
  "colorfulPyPrint>=0.1",
  "python-dotenv>=0.21"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["db_bridge*"]
