[project]
name = "db-bridge"
version = "0.3.0"
description = """Minimal Python SQL connector with support for MySQL, SQLite, and PostgreSQL.
Execute raw or parameterized queries with zero boilerplate.
Manage multiple database profiles via a simple INI file (~/.db_bridge.cfg)
"""
readme = "README.md"
authors = [{name = "Kanad Rishiraj (RoamingSaint)", email = "roamingsaint27@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = [
  "pymysql>=1.0",
  "psycopg2-binary>=2.9",
  "AskUser>=0.1",
]

[project.optional-dependencies]
color = ["colorfulPyPrint>=0.1"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["db_bridge*"]
